--- a/stories/index.html
+++ b/stories/index.html
@@ -500,6 +500,12 @@
       <td><a name="zh0049"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/zh/0052_辛波薇亚_slides.html" target="_blank">辛波薇亚</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0053</td>
       <td><a href="/stories/zh/0053_这是我_slides.html" target="_blank">这是我</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -552,6 +558,12 @@
       <td><a href="/stories/zh/0087_我喜欢看书_slides.html" target="_blank">我喜欢看书</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="zh0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0089</td>
+      <td><a href="/stories/zh/0089_和植物聊天的卡莱_slides.html" target="_blank">和植物聊天的卡莱</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -734,6 +746,12 @@
       <td><a name="zh0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0294</td>
+      <td><a href="/stories/zh/0294_奶奶的香蕉_slides.html" target="_blank">奶奶的香蕉</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0296</td>
       <td><a href="/stories/zh/0296_卖香蕉的汤姆_slides.html" target="_blank">卖香蕉的汤姆</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -866,6 +884,18 @@
       <td><a name="nl0011"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0106</td>
+      <td><a href="/stories/nl/0106_namukurus-fiets_slides.html" target="_blank">Namukuru’s fiets</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0106"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0136</td>
+      <td><a href="/stories/nl/0136_hamisis-geluksdag_slides.html" target="_blank">Hamisi’s geluksdag</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0136"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0231</td>
       <td><a href="/stories/nl/0231_weerboek_slides.html" target="_blank">Weerboek</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -876,6 +906,18 @@
       <td><a href="/stories/nl/0253_mijn-prentenboek_slides.html" target="_blank">Mijn prentenboek</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="nl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0266</td>
+      <td><a href="/stories/nl/0266_bunty-en-bubbly_slides.html" target="_blank">Bunty en Bubbly</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0266"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0319</td>
+      <td><a href="/stories/nl/0319_juffrouw-mulongo_slides.html" target="_blank">Juffrouw Mulongo</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0319"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0337</td>
@@ -1436,6 +1478,12 @@
       <td><a name="ko0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/ko/0052_심베그위레_slides.html" target="_blank">심베그위레</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0066</td>
       <td><a href="/stories/ko/0066_노자벨레와-세-머리카락_slides.html" target="_blank">노자벨레와 세 머리카락</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1446,6 +1494,12 @@
       <td><a href="/stories/ko/0067_요리_slides.html" target="_blank">요리</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0072</td>
+      <td><a href="/stories/ko/0072_꿀잡이새의-복수_slides.html" target="_blank">꿀잡이새의 복수</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -1470,6 +1524,12 @@
       <td><a href="/stories/ko/0095_자마는-대단해요_slides.html" target="_blank">자마는 대단해요!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0110</td>
+      <td><a href="/stories/ko/0110_작은-씨앗-완가리-마타이의-이야기_slides.html" target="_blank">작은 씨앗: 완가리 마타이의 이야기</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -1514,6 +1574,12 @@
       <td><a name="ko0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="/stories/ko/0201_당나귀-아이-_slides.html" target="_blank">당나귀 아이 </a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0210</td>
       <td><a href="/stories/ko/0210_틴지와-소들_slides.html" target="_blank">틴지와 소들</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1536,6 +1602,18 @@
       <td><a href="/stories/ko/0271_둘_slides.html" target="_blank">둘</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0291</td>
+      <td><a href="/stories/ko/0291_부시의-누나가-말한-것_slides.html" target="_blank">부시의 누나가 말한 것</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0294</td>
+      <td><a href="/stories/ko/0294_할머니의-바나나들_slides.html" target="_blank">할머니의 바나나들</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0296</td>
@@ -2703,7 +2781,7 @@
       <td>0052</td>
       <td><a href="http://my.africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#tl0052">tl</a></td>
+      <td><a href="#ko0052">ko</a>, <a href="#tl0052">tl</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -2745,7 +2823,7 @@
       <td>0072</td>
       <td><a href="http://my.africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#tl0072">tl</a></td>
+      <td><a href="#ko0072">ko</a>, <a href="#tl0072">tl</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -2781,7 +2859,7 @@
       <td>0089</td>
       <td><a href="http://my.africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0089">ko</a>, <a href="#tl0089">tl</a></td>
+      <td><a href="#ko0089">ko</a>, <a href="#tl0089">tl</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -2802,10 +2880,16 @@
       <td><a href="#gu0098">gu</a>, <a href="#zh0098">zh</a></td>
     </tr>
     <tr>
+      <td>0106</td>
+      <td><a href="http://my.africanstorybook.org/stories/namukuru’s-bicycle">Namukuru’s bicycle</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#nl0106">nl</a></td>
+    </tr>
+    <tr>
       <td>0110</td>
       <td><a href="http://my.africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#no0110">no</a>, <a href="#tl0110">tl</a></td>
+      <td><a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#tl0110">tl</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -2868,6 +2952,12 @@
       <td><a href="#nn0134">nn</a>, <a href="#no0134">no</a></td>
     </tr>
     <tr>
+      <td>0136</td>
+      <td><a href="http://my.africanstorybook.org/stories/hamisis-lucky-day">Hamisi’s lucky day</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#nl0136">nl</a></td>
+    </tr>
+    <tr>
       <td>0141</td>
       <td><a href="http://my.africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
@@ -2925,7 +3015,7 @@
       <td>0201</td>
       <td><a href="http://my.africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0201">tl</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ko0201">ko</a>, <a href="#tl0201">tl</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -3012,6 +3102,12 @@
       <td><a href="#zh0264">zh</a></td>
     </tr>
     <tr>
+      <td>0266</td>
+      <td><a href="http://my.africanstorybook.org/stories/bunty-and-bubbly">Bunty and Bubbly</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#nl0266">nl</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="http://my.africanstorybook.org/stories/two">Two</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -3027,13 +3123,13 @@
       <td>0291</td>
       <td><a href="http://my.africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#tl0291">tl</a></td>
+      <td><a href="#ko0291">ko</a>, <a href="#tl0291">tl</a></td>
     </tr>
     <tr>
       <td>0294</td>
       <td><a href="http://my.africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ne0294">ne</a>, <a href="#tl0294">tl</a></td>
+      <td><a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#tl0294">tl</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
@@ -3070,6 +3166,12 @@
       <td><a href="http://my.africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#ko0315">ko</a>, <a href="#tl0315">tl</a></td>
+    </tr>
+    <tr>
+      <td>0319</td>
+      <td><a href="http://my.africanstorybook.org/stories/teacher-mulongo">Teacher Mulongo</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#nl0319">nl</a></td>
     </tr>
     <tr>
       <td>0320</td>
